--- a/locales/en.json
+++ b/locales/en.json
@@ -4,10 +4,10 @@
 		"intro": "** First install Device via myStrom-App (iOS, Android) **"
 	},
 	"device": {
-		"error": "Device error (__code__)",
+		"error": "Device error (__msg__)",
 		"online": "Device is online",
 		"offline": "Device is offline",
-		"waiting": "Waiting for device to connect...",
+		"connecting": "Conntect to device",
 		"stateSet": "Set state to: __value__",
 		"rampSet": "Set ramp to: __value__",
 		"dimSet": "Set dim to: __value__%",
@@ -15,6 +15,7 @@
 		"lightTemperatureSet": "Set temperature to: __value__",
 		"lightHueSet": "Set hue to: __value__",
 		"lightSaturationSet": "Set saturation to: __value__",
+		"lightHueSetSaturation": "Set hue & saturation to: __hue__ / __saturation__ ",
 		"button": {
 			"pressed": "**__device__** [__action__] button pressed",
 			"action-1": "short",
